@@ -1,3 +1,11 @@
+2002-04-02  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* Makefile.in: remove tclXinitLib.c
+
+	* configure: regened
+	* configure.in: call SC_TCL_LINK_LIBS and add MATH_LIBS on unix.
+	* tclconfig/tcl.m4: updated with TEA sample
+
 2002-04-01  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* README: added some notes
